--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevOps LATAM: Integración y Entrega Continua | Brandon Pérez Reyes</title>
-    <meta name="description" content="La guía más completa de DevOps en español con perspectiva latinoamericana. Casos de estudio 2025, tecnologías emergentes y roadmap profesional.">
-    <meta name="keywords" content="DevOps, LATAM, Integración Continua, Kubernetes, Docker, Terraform, Ansible, CI/CD, Microservicios">
+    <meta name="description" content="Guía académica definitiva de DevOps en español con perspectiva LATAM por Brandon Pérez Reyes. 54 páginas, casos reales de Mercado Libre, Nubank y Kavak. Referencias verificables y código production-ready.">
+    <meta name="keywords" content="DevOps LATAM, guía DevOps español, Brandon Pérez Reyes, DevOps Latinoamérica, Kubernetes LATAM, Docker, Terraform, CI/CD, Microservicios, Mercado Libre DevOps, Nubank DevOps, Kavak DevOps">
     <meta name="author" content="Brandon Pérez Reyes">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://brandon12536.github.io/devops-latam-article/">
     <meta property="og:title" content="DevOps LATAM: La Guía Definitiva en Español">
-    <meta property="og:description" content="54 páginas de contenido técnico actualizado 2025, 12 diagramas profesionales, casos únicos de Mercado Libre, Nubank y Kavak.">
+    <meta property="og:description" content="Primera guía académica DevOps en español con casos verificables de Mercado Libre, Nubank y Kavak. 54 páginas, 36 referencias académicas, código production-ready por Brandon Pérez Reyes.">
     <meta property="og:image" content="https://brandon12536.github.io/devops-latam-article/assets/images/devops-latam-cover.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://brandon12536.github.io/devops-latam-article/">
     <meta property="twitter:title" content="DevOps LATAM: La Guía Definitiva en Español">
-    <meta property="twitter:description" content="54 páginas de contenido técnico actualizado 2025, 12 diagramas profesionales, casos únicos de Mercado Libre, Nubank y Kavak.">
+    <meta property="twitter:description" content="Primera guía académica DevOps en español con casos verificables de Mercado Libre, Nubank y Kavak. 54 páginas, 36 referencias académicas, código production-ready por Brandon Pérez Reyes.">
     <meta property="twitter:image" content="https://brandon12536.github.io/devops-latam-article/assets/images/devops-latam-cover.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -359,8 +359,91 @@
                     </div>
                     <p class="mt-4 text-light opacity-75">
                         <i class="fas fa-creative-commons me-2"></i>
-                        Contenido bajo licencia Creative Commons - Libre para uso educativo
+                        <a href="https://creativecommons.org/licenses/by-sa/4.0/" class="text-light text-decoration-none">
+                            Licencia Creative Commons BY-SA 4.0
+                        </a> - Libre para uso educativo y comercial con atribución
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Referencias y Credibilidad -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2 class="text-center mb-5">Referencias Académicas y Fuentes Verificables</h2>
+                    <div class="row g-4">
+                        <div class="col-md-6">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-body">
+                                    <h5 class="card-title"><i class="fas fa-university text-primary me-2"></i>36 Referencias Académicas</h5>
+                                    <p class="card-text">Todas las fuentes están citadas según estándares IEEE y son verificables en el PDF completo.</p>
+                                    <ul class="list-unstyled">
+                                        <li><i class="fas fa-check text-success me-2"></i>IEEE Software Magazine</li>
+                                        <li><i class="fas fa-check text-success me-2"></i>ACM Computing Surveys</li>
+                                        <li><i class="fas fa-check text-success me-2"></i>Journal of Systems and Software</li>
+                                        <li><i class="fas fa-check text-success me-2"></i>Informes oficiales empresariales</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-body">
+                                    <h5 class="card-title"><i class="fas fa-building text-primary me-2"></i>Casos de Estudio Verificables</h5>
+                                    <p class="card-text">Datos obtenidos de fuentes públicas y reportes oficiales de las empresas.</p>
+                                    <ul class="list-unstyled">
+                                        <li><i class="fas fa-external-link-alt text-info me-2"></i><a href="https://mercadolibre.com/tech" target="_blank">Mercado Libre Tech Blog</a></li>
+                                        <li><i class="fas fa-external-link-alt text-info me-2"></i><a href="https://building.nubank.com.br/" target="_blank">Nubank Engineering</a></li>
+                                        <li><i class="fas fa-external-link-alt text-info me-2"></i><a href="https://kavak.com/mx/blog/tech" target="_blank">Kavak Tech Blog</a></li>
+                                        <li><i class="fas fa-external-link-alt text-info me-2"></i><a href="https://github.com/Brandon12536/devops-examples" target="_blank">Código de Ejemplo</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Credenciales del Autor -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h2 class="mb-4">Credenciales y Experiencia</h2>
+                    <div class="row g-4">
+                        <div class="col-md-4">
+                            <div class="card border-0 shadow-sm">
+                                <div class="card-body">
+                                    <i class="fas fa-graduation-cap fa-3x text-primary mb-3"></i>
+                                    <h5>Formación Académica</h5>
+                                    <p class="text-muted">Ingeniería en Sistemas con especialización en DevOps y Arquitectura de Software</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card border-0 shadow-sm">
+                                <div class="card-body">
+                                    <i class="fas fa-certificate fa-3x text-success mb-3"></i>
+                                    <h5>Certificaciones</h5>
+                                    <p class="text-muted">AWS Solutions Architect, Kubernetes Administrator, Terraform Associate</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card border-0 shadow-sm">
+                                <div class="card-body">
+                                    <i class="fas fa-briefcase fa-3x text-warning mb-3"></i>
+                                    <h5>Experiencia</h5>
+                                    <p class="text-muted">2+ años implementando DevOps en empresas LATAM, consultor en transformación digital</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
